--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                                <a class="nav-link" href="/index.html">WEDDING PAINTING</a>
+                                <a class="nav-link" href="index.html">WEDDING PAINTING</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">PRICING</a>
+                                <a class="nav-link" href="pricing.html">PRICING</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">ABOUT ARTIST</a>
+                                <a class="nav-link" href="contacts.html">ABOUT ARTIST</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">ART GALLERY</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">CONTACTS</a>
+                                <a class="nav-link" href="contacts.html">CONTACTS</a>
                             </li>
                         </ul>
                     </div>
@@ -73,7 +73,7 @@
                         <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 gallery-item">
                             <a href="details.html?id=2"><img
                                     src="assets/images/small_paintings/scarborough wedding painting.jpg"
-                                    alt="scarborough wedding painting"></a>
+                                    alt="06-24-17-scarborough-wedding-painting"></a>
                         </div>
                         <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 gallery-item">
                             <a href="details.html?id=3"><img
