apdate prices page

--- a/about_artist.html
+++ b/about_artist.html
@@ -46,13 +46,13 @@
                                 <a class="nav-link" href="index.html">WEDDING PAINTING</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="prices.html">PRICING</a>
+                                <a class="nav-link" href="prices.html">PRICES</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about_artist.html">ABOUT ARTIST</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">ART GALLERY</a>
+                                <a class="nav-link" href="https://www.vesnalongton-art.com" target="_blank">ART GALLERY</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contacts.html">CONTACTS</a>
@@ -69,10 +69,13 @@
                     <!-- <img src="assets/images/me/vesna longton at ashley wedding.jpg" alt="vesna longton at ashley wedding"> -->
                     </div>
                     <div class="col-md-7 biography px-5">
-                        <p> 
-                        <h1>Biography</h1>
+                        <p>
+                        <h1>Biography</h1></p>
                         <br>
-                            <p>Vesna Longton is a professional artist with a formal art education. She has over 16 years of experience in live event painting.</p>
+                            <p>Vesna Longton is a professional artist with a formal art education. She has over 17 years of experience in live event painting.</p>
+                            <p> She paints live at events, including Weddings, Fundraisers, Bar or Bat Mitzvahs, Graduations, Quinceañeras, Christmas Parties, Corporate Functions.
+
+                                She serves MA, RI, CT, NH, NY, ME and VT.</p>
                             
                             <p>Vesna was born in 1974 in Moscow, Russia. <br>
                             1996 Graduated from Moscow State Pedagogical University, Faculty of Fine Art. <br>
