--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                                 <a class="nav-link" href="index.html">WEDDING PAINTING</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pricing.html">PRICING</a>
+                                <a class="nav-link" href="prices.html">PRICES</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contacts.html">ABOUT ARTIST</a>
+                                <a class="nav-link" href="about_artist.html">ABOUT ARTIST</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">ART GALLERY</a>
+                                <a class="nav-link" href="https://www.vesnalongton-art.com" target="_blank">ART GALLERY</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contacts.html">CONTACTS</a>
